@@ -1,4 +1,5 @@
 * 2016.09.05 - added HDF5 library description
+             - changed soft functions 'detect' to 'internal_detect' and 'check' to 'detect'
 
 * 2016.09.01 - fixed recursive search of directories in Python 2.x with non-ascii directories
  
